<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            android:id="@+id/text_2"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            layout="@layout/inner_mirco2" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/bg_04"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/friedname" />

                <EditText
                    android:id="@+id/friedname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plfriedname"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex" />

                    <Spinner
                        android:id="@+id/friedsex"
                        style="@style/spnier"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age" />

                    <EditText
                        android:id="@+id/friedage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/plage"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textSize="12sp" >
                    </EditText>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/schools" />

                <EditText
                    android:id="@+id/friedschools"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plschools"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/reservation" />

                <!-- 防止EditText自动获取焦点，触发日期选择器。 -->

                <EditText
                    android:id="@+id/reservation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/plfriedreservation"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/remk" />

                <EditText
                    android:id="@+id/remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plremk"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:singleLine="true"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="38dp"
                        android:layout_weight="1" >

                        <ImageButton
                            android:id="@+id/fre_submbtn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/none"
                            android:src="@drawable/denglv_icon_13" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/submit"
                            android:textColor="#FFFFFF"
                            android:textSize="15sp" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="38dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" >

                        <ImageButton
                            android:id="@+id/fre_cleartemp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/none"
                            android:src="@drawable/denglv_icon_13" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/reset"
                            android:textColor="#FFFFFF"
                            android:textSize="15sp" />
                    </FrameLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>